--- a/index.html
+++ b/index.html
@@ -11,13 +11,24 @@
 <style type="text/css">
 	.wrap{
 		display: flex;
+		flex-direction: column;
 		justify-content: center;
+		align-items: center;
 	}
 </style>
 </head>
 <body>
     <div class="wrap">
-    	<img src="https://user-images.githubusercontent.com/16177158/38065986-7791f5e2-3338-11e8-90e5-724ce5b9e39e.jpg">
+        <p>不能将你遗忘，则生命沉入永夜</p>
+		<p>若在梦中出现，永夜就将化为晴日</p>
+    	<img src="https://user-images.githubusercontent.com/16177158/38067866-d084e922-3340-11e8-9498-6663ab0341a3.jpg" width="1080">
+    	<p>合百草兮实庭，建芳馨兮庑门</p>
+		<p>九嶷缤兮并迎，灵之来兮如云</p>
+		<p>捐余袂兮江中，遗余褋兮澧浦</p>
+		<p>搴汀洲兮杜若，将以遗兮远者</p>
+		<p>时不可兮骤得，聊逍遥兮容与</p>
     </div>
+    <audio style="display: none" src="http://www.170mv.com/kw/other.web.rz01.sycdn.kuwo.cn/resource/n1/34/85/3193126609.mp3" autoplay="autoplay" loop="loop">
+    </audio>
 </body>
 </html>
