--- a/index.html
+++ b/index.html
@@ -1,34 +1,156 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Examples</title>
-<meta name="description" content="">
-<meta name="keywords" content="">
-<link href="" rel="stylesheet">
-<style type="text/css">
-	.wrap{
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-	}
-</style>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Examples</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/css/swiper.min.css">
+    <style>
+    html,
+    body {
+        position: relative;
+        height: 100%;
+    }
+
+    body {
+        background: #000;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .wrap{
+		width: 480px;
+		height: 550px;
+    }
+
+    .logo{
+        font-family: Arial, Verdana, sans-serif;
+        font-weight: bold;
+        line-height: 36px;
+        -ms-word-wrap: break-word;
+        word-wrap: break-word;
+        color: #fff;
+        font-size: 36px;
+        margin-top: -36px;
+    }
+
+    .swiper-container {
+        width: 100%;
+        height: 300px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .swiper-slide {
+        background-size: cover;
+        background-position: center;
+    }
+
+    .gallery-top {
+        height: 80%;
+        width: 100%;
+    }
+
+    .gallery-thumbs {
+        height: 20%;
+        box-sizing: border-box;
+        padding: 10px 0;
+    }
+
+    .gallery-thumbs .swiper-slide {
+        height: 100%;
+        opacity: 0.4;
+    }
+
+    .gallery-thumbs .swiper-slide-active {
+        opacity: 1;
+    }
+    </style>
 </head>
+
 <body>
     <div class="wrap">
-        <p>不能将你遗忘，则生命沉入永夜</p>
-		<p>若在梦中出现，永夜就将化为晴日</p>
-    	<img src="https://user-images.githubusercontent.com/16177158/38067866-d084e922-3340-11e8-9498-6663ab0341a3.jpg" width="1080">
-    	<p>合百草兮实庭，建芳馨兮庑门</p>
-		<p>九嶷缤兮并迎，灵之来兮如云</p>
-		<p>捐余袂兮江中，遗余褋兮澧浦</p>
-		<p>搴汀洲兮杜若，将以遗兮远者</p>
-		<p>时不可兮骤得，聊逍遥兮容与</p>
+        <p class="logo">Hi</p>
+	    <!-- Swiper -->
+	    <div class="swiper-container gallery-top">
+	        <div class="swiper-wrapper">
+	            <div class="swiper-slide" style="background-image:url(1.jpg)"></div>
+	            <div class="swiper-slide" style="background-image:url(2.jpg)"></div>
+	            <div class="swiper-slide" style="background-image:url(3.jpg)"></div>
+	            <div class="swiper-slide" style="background-image:url(4.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(5.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(6.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(7.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(8.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(9.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(10.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(11.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(12.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(13.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(14.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(15.jpg)"></div>
+	        </div>
+	        <!-- Add Arrows -->
+	        <div class="swiper-button-next swiper-button-white"></div>
+	        <div class="swiper-button-prev swiper-button-white"></div>
+	    </div>
+	    <div class="swiper-container gallery-thumbs">
+	        <div class="swiper-wrapper">
+                <div class="swiper-slide" style="background-image:url(1.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(2.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(3.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(4.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(5.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(6.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(7.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(8.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(9.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(10.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(11.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(12.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(13.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(14.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(15.jpg)"></div>
+	        </div>
+	    </div>
     </div>
-    <audio style="display: none" src="http://www.170mv.com/kw/other.web.rz01.sycdn.kuwo.cn/resource/n1/34/85/3193126609.mp3" autoplay="autoplay" loop="loop">
-    </audio>
+    <audio style="display: none;" src="http://www.170mv.com/kw/other.web.rz01.sycdn.kuwo.cn/resource/n1/34/85/3193126609.mp3" autoplay="autoplay" loop="loop"></audio>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.min.js"></script>
+    <!-- Initialize Swiper -->
+    <script>
+    var galleryTop = new Swiper('.gallery-top', {
+    	autoplay: {
+    		delay: 3000
+    	},
+        spaceBetween: 10,
+        loop: true,
+        effect: 'fade',
+        loopedSlides: 5, //looped slides should be the same
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
+    });
+    var galleryThumbs = new Swiper('.gallery-thumbs', {
+        spaceBetween: 10,
+        slidesPerView: 4,
+        touchRatio: 0.2,
+        loop: true,
+        loopedSlides: 5, //looped slides should be the same
+        slideToClickedSlide: true,
+    });
+    galleryTop.controller.control = galleryThumbs;
+    galleryThumbs.controller.control = galleryTop;
+    </script>
 </body>
+
 </html>
