--- a/index.html
+++ b/index.html
@@ -32,15 +32,24 @@
 		height: 550px;
     }
 
-    .logo{
+    .text-one,.text-two{
         font-family: Arial, Verdana, sans-serif;
-        font-weight: bold;
-        line-height: 36px;
-        -ms-word-wrap: break-word;
-        word-wrap: break-word;
         color: #fff;
         font-size: 36px;
         margin-top: -36px;
+    }
+
+    .bottom-text{
+        position: fixed;
+        bottom: 0;
+    }
+
+    .bottom-text p{
+        font-family: Arial, Verdana, sans-serif;
+        color: #fff;
+        font-size: 20px;
+        text-align: center;
+        margin: 0;
     }
 
     .swiper-container {
@@ -79,7 +88,7 @@
 
 <body>
     <div class="wrap">
-        <p class="logo">Hi</p>
+        <p class="text-one">Hi</p>
 	    <!-- Swiper -->
 	    <div class="swiper-container gallery-top">
 	        <div class="swiper-wrapper">
@@ -122,6 +131,10 @@
                 <div class="swiper-slide" style="background-image:url(15.jpg)"></div>
 	        </div>
 	    </div>
+    </div>
+    <div class="bottom-text">
+        <p>秩秩斯干</p>
+        <p>幽幽南山</p>
     </div>
     <audio style="display: none;" src="http://www.170mv.com/kw/other.web.rz01.sycdn.kuwo.cn/resource/n1/34/85/3193126609.mp3" autoplay="autoplay" loop="loop"></audio>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.min.js"></script>
