--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Examples</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/css/swiper.min.css">
+    <title>懒懒呀</title>
+    <link rel="stylesheet" href="swiper.min.css">
     <style>
     html,
     body {
@@ -32,15 +32,23 @@
 		height: 550px;
     }
 
-    .logo{
+    .text-one{
         font-family: Arial, Verdana, sans-serif;
-        font-weight: bold;
-        line-height: 36px;
-        -ms-word-wrap: break-word;
-        word-wrap: break-word;
         color: #fff;
         font-size: 36px;
         margin-top: -36px;
+    }
+
+    .bottom-text{
+        margin-top: 30px;
+    }
+
+    .bottom-text p{
+        font-family: Arial, Verdana, sans-serif;
+        color: #fff;
+        font-size: 20px;
+        text-align: center;
+        margin: 0;
     }
 
     .swiper-container {
@@ -79,7 +87,7 @@
 
 <body>
     <div class="wrap">
-        <p class="logo">Hi</p>
+        <p class="text-one">Hi</p>
 	    <!-- Swiper -->
 	    <div class="swiper-container gallery-top">
 	        <div class="swiper-wrapper">
@@ -122,9 +130,13 @@
                 <div class="swiper-slide" style="background-image:url(15.jpg)"></div>
 	        </div>
 	    </div>
+        <div class="bottom-text">
+            <p>秩秩斯干</p>
+            <p>幽幽南山</p>
+        </div>
     </div>
     <audio style="display: none;" src="http://www.170mv.com/kw/other.web.rz01.sycdn.kuwo.cn/resource/n1/34/85/3193126609.mp3" autoplay="autoplay" loop="loop"></audio>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.min.js"></script>
+    <script src="swiper.min.js"></script>
     <!-- Initialize Swiper -->
     <script>
     var galleryTop = new Swiper('.gallery-top', {
