--- a/index.html
+++ b/index.html
@@ -5,107 +5,32 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>懒懒呀</title>
-    <link rel="stylesheet" href="swiper.min.css">
-    <style>
-    html,
-    body {
-        position: relative;
-        height: 100%;
-    }
-
-    body {
-        background: #000;
-        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-        font-size: 14px;
-        color: #000;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .wrap{
-		width: 480px;
-		height: 550px;
-    }
-
-    .text-one{
-        font-family: Arial, Verdana, sans-serif;
-        color: #fff;
-        font-size: 36px;
-        margin-top: -36px;
-    }
-
-    .bottom-text{
-        margin-top: 30px;
-    }
-
-    .bottom-text p{
-        font-family: Arial, Verdana, sans-serif;
-        color: #fff;
-        font-size: 20px;
-        text-align: center;
-        margin: 0;
-    }
-
-    .swiper-container {
-        width: 100%;
-        height: 300px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .swiper-slide {
-        background-size: cover;
-        background-position: center;
-    }
-
-    .gallery-top {
-        height: 80%;
-        width: 100%;
-    }
-
-    .gallery-thumbs {
-        height: 20%;
-        box-sizing: border-box;
-        padding: 10px 0;
-    }
-
-    .gallery-thumbs .swiper-slide {
-        height: 100%;
-        opacity: 0.4;
-    }
-
-    .gallery-thumbs .swiper-slide-active {
-        opacity: 1;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/swiper.min.css">
 </head>
 
 <body>
+    <canvas width="100%" height="100%" class="snow"></canvas>
     <div class="wrap">
         <p class="text-one">Hi</p>
 	    <!-- Swiper -->
 	    <div class="swiper-container gallery-top">
 	        <div class="swiper-wrapper">
-	            <div class="swiper-slide" style="background-image:url(1.jpg)"></div>
-	            <div class="swiper-slide" style="background-image:url(2.jpg)"></div>
-	            <div class="swiper-slide" style="background-image:url(3.jpg)"></div>
-	            <div class="swiper-slide" style="background-image:url(4.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(5.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(6.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(7.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(8.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(9.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(10.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(11.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(12.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(13.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(14.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(15.jpg)"></div>
+	            <div class="swiper-slide" style="background-image:url(img/1.jpg)"></div>
+	            <div class="swiper-slide" style="background-image:url(img/2.jpg)"></div>
+	            <div class="swiper-slide" style="background-image:url(img/3.jpg)"></div>
+	            <div class="swiper-slide" style="background-image:url(img/4.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/5.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/6.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/7.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/8.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/9.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/10.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/11.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/12.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/13.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/14.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/15.jpg)"></div>
 	        </div>
 	        <!-- Add Arrows -->
 	        <div class="swiper-button-next swiper-button-white"></div>
@@ -113,21 +38,21 @@
 	    </div>
 	    <div class="swiper-container gallery-thumbs">
 	        <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background-image:url(1.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(2.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(3.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(4.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(5.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(6.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(7.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(8.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(9.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(10.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(11.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(12.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(13.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(14.jpg)"></div>
-                <div class="swiper-slide" style="background-image:url(15.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/1.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/2.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/3.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/4.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/5.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/6.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/7.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/8.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/9.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/10.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/11.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/12.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/13.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/14.jpg)"></div>
+                <div class="swiper-slide" style="background-image:url(img/15.jpg)"></div>
 	        </div>
 	    </div>
         <div class="bottom-text">
@@ -135,10 +60,32 @@
             <p>幽幽南山</p>
         </div>
     </div>
-    <audio style="display: none;" src="http://www.170mv.com/kw/other.web.rz01.sycdn.kuwo.cn/resource/n1/34/85/3193126609.mp3" autoplay="autoplay" loop="loop"></audio>
-    <script src="swiper.min.js"></script>
+    <audio id="music" style="display: none;" src="http://www.170mv.com/kw/other.web.rz01.sycdn.kuwo.cn/resource/n1/34/85/3193126609.mp3" autoplay="autoplay" loop="loop"></audio>
+    <script src="js/swiper.min.js"></script>
+    <script src="js/flexible.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.let_it_snow.js"></script>
     <!-- Initialize Swiper -->
     <script>
+    // 飘雪
+    $(document).ready( function() {
+      $("canvas.snow").let_it_snow();
+    });
+    // 自动播放
+    function audioAutoPlay(id){ 
+        var audio = document.getElementById(id),  
+            play = function(){  
+                audio.play();  
+                document.removeEventListener("touchstart",play, false);  
+            };  
+        audio.play();  
+        document.addEventListener("WeixinJSBridgeReady", function () {//微信  
+           play();  
+        }, false);  
+        document.addEventListener("touchstart",play, false);  
+    }  
+    audioAutoPlay('music');  
+
     var galleryTop = new Swiper('.gallery-top', {
     	autoplay: {
     		delay: 3000
